[gd_scene load_steps=3 format=3 uid="uid://802s5kvqr3ka"]

[ext_resource type="Script" path="res://CharterUI.gd" id="1_p1e3f"]
[ext_resource type="Script" path="res://CharterNodeView.gd" id="2_y5cb6"]

[node name="Charter" type="Node"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_p1e3f")

[node name="NodeView" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_y5cb6")

[node name="EmptyRMBClickContextMenu" type="PopupMenu" parent="NodeView"]
size = Vector2i(151, 100)
item_count = 1
item_0/text = "Create new node"

[connection signal="index_pressed" from="NodeView/EmptyRMBClickContextMenu" to="NodeView" method="_on_empty_menu_index_pressed"]
